Fix: fixes masked address alignment issue

--- a/src/modules/core/components/MaskedAddress/MaskedAddress.css
+++ b/src/modules/core/components/MaskedAddress/MaskedAddress.css
@@ -2,6 +2,7 @@
   font-family: var(--family-techie);
   font-size: var(--size-smallish);
   font-weight: 600;
+  line-height: 1;
   color: var(--temp-grey-blue-7);
 }
 
